--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <a href="index3.html">identitas</a><br/>
 <a href="skl/tabel.html">Experiency&Education</a><br/>
 <a href="skl/indeks.html">project</a><br/>
-<a href="public/contact.html">contact</a>
+<a href="public/contact.html">contact</a><br/>
+<a href="skl/kombinator-1.html">kombinator</a>
 </body>
 
 </html>
