--- a/skl/layout.html
+++ b/skl/layout.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link type="text/css" rel="stylesheet" href="../style/layout.css">
+    <link type="text/css" rel="stylesheet" href="layout.css">
     <title>tugas layout</title>
 </head>
 <body>
