--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <a href="skl/tabel.html">Experiency&Education</a><br/>
 <a href="skl/indeks.html">project</a><br/>
 <a href="public/contact.html">contact</a><br/>
-<a href="skl/kombinator-1.html">kombinator</a>
+<a href="skl/kombinator-1.html">kombinator</a><br/>
+<a href="skl/layout.css">layout</a>
 </body>
 
 </html>
