--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <a href="skl/indeks.html">project</a><br/>
 <a href="public/contact.html">contact</a><br/>
 <a href="skl/kombinator-1.html">kombinator</a><br/>
-<a href="skl/layout.css">layout</a>
+<a href="skl/layout.html">layout</a>
 </body>
 
 </html>
